Fixed scrollbar placement

--- a/src/Pages/HomePage/Home.css
+++ b/src/Pages/HomePage/Home.css
@@ -2274,7 +2274,7 @@
             border-radius: 25px;
             box-shadow: none;
             margin-top: -15px;
-            margin-left: 0px;
+            margin-left: 2px;
         }
 
 .overlay[type=profile] {
